# sophi

./: .gitignore  Cargo.toml  README.md
src/: build.rs  dev.rs  drive.rs  help.rs  login.rs  logout.rs  main.rs  push.rs  ship.rs  template.rs  unknown.rs
src/util/: google.rs  loading.rs  mod.rs  timer.rs
template/: package.json  sophi.config.json  tsconfig.client.json  tsconfig.server.json
template/client/components/: MainMenu.vue
template/client/js/: hello.js
template/client/main/: app.js  index.html  index.js
template/server/: ConfigEnv.js  server.js
template/shared/: Helpers.js
